# HSF-ChemBO-tutorial

./: README.md  max_tutorial.ipynb  pyproject.toml  requirements.txt  tutorial.ipynb  tutorial_beginners.ipynb
base/: kernels.py  llm_utils.py  pretrained_repr.py  utils.py
